--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,4 +12,8 @@ suites:
   - name: default
     run_list:
       - recipe[ftp-cloudfs::default]
-    attributes:
+    attributes: {
+    	"ftp-cloudfs": {
+    		"auth_url": "http://test/url"
+    	}
+    }
