--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ gemfile:
 rvm:
   - 1.9.3
   - 2.0.0
+bundler_args: --without kitchen
 before_script:
   - bundle exec berks install
 script:
-  - bundle exec strainer test
+  - bundle exec strainer test --except kitchen
   - bundle exec rake knife
